# Kart-Public-3D

./: .gitignore  .gitmodules  build.sh
.github/workflows/: rolling-release.yml
leiasr_shim/: CMakeLists.txt  README.md  leiasr_shim.cpp
src/: CMakeLists.txt  Makefile  d_clisrv.c  d_main.c  f_wipe.c  i_video.h  m_menu.c  p_setup.c  r_main.c  r_stereo.c  r_stereo.h  r_stereo_leiasr.c  r_stereo_leiasr.h  st_stuff.c  v_video.c
src/hardware/: hw_defs.h  hw_drv.h  hw_main.c  hw_main.h
src/hardware/r_opengl/: r_opengl.c
src/sdl/: hwsym_sdl.c  i_video.c  ogl_sdl.c
